[gd_scene load_steps=4 format=3 uid="uid://rtwo3a1kcld7"]

[ext_resource type="Script" path="res://autoloads/audio_handler.gd" id="1_dvo87"]
[ext_resource type="AudioStream" uid="uid://ch2xbik6rbtmb" path="res://assets/audio/March of the Phantoms_Preparations.wav" id="2_g55fg"]
[ext_resource type="AudioStream" uid="uid://r1k2m5r4i33u" path="res://assets/audio/March of the Phantoms_Battle Begins.wav" id="3_v0w3s"]

[node name="AudioHandler" type="Node2D"]
script = ExtResource("1_dvo87")

[node name="MainBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_g55fg")
autoplay = true

[node name="FightingBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_v0w3s")
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
